--- a/accounting/www/index.html
+++ b/accounting/www/index.html
@@ -7,6 +7,7 @@ Welcome to Gada Electronics.
 <div class="row">
   <div class="col-sm-6">
     <a href="/shopping-cart"> Cart </a><br>
+    <a href="/new-shopping-cart"> New Shopping Cart </a><br>
     <a href="/items"> Catalog </a><br>
   </div>
   <div class="col-sm-6">
